# veltrix-engine

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  check_gguf.py  check_qwen_gguf.py  check_tensors.py  download_model.ps1  test_load.c
docs/: README.md  roadmap.md
docs/architecture/: forward.md  model.md  overview.md  quantization.md
docs/developer/: adding-new-architecture.md  adding-new-format.md  getting-started.md  testing.md
docs/formats/: format-abstraction.md  gguf.md  safetensors.md
docs/html/: Architecture.html
docs/optimization/: metalearn.md  runtime-profiles.md  scheduler.md  simd.md  speculative.md  tokenizer.md
docs/superpowers/plans/: 2026-06-13-target-toks-runtime.md
include/: format.h  gguf.h  metalearn.h  model.h  platform.h  quantize.h  runtime_guard.h  runtime_profile.h  scheduler.h  speculative.h  tensor.h  tokenizer.h  veltrix.h
src/: format.c  gguf.c  lora.c  main.c  metalearn.c  model.c  onnx.c  quantize.c  runtime_guard.c  runtime_profile.c  safetensors.c  scheduler.c  speculative.c  tensor.c  tokenizer.c
src/simd/: avx2.c  simd.h
tests/: adapter_config.json  benchmark.c  config.json  gen_lora.py  gen_onnx.py  test_e2e.c  test_gguf.c  test_lora.c  test_lora.safetensors  test_onnx.c  test_runtime_guard.c  test_runtime_profile.c  test_synthetic.onnx  test_tiktoken.c  test_tiktoken.json  test_tokenizer.json  test_tokenizer_json.c
